# create-finic-app

./: .env.example  .gitignore  Dockerfile  finic_config.json  pyproject.toml  secrets.json.example
finic/: __init__.py
main/: main.py
